tests/fixtures/positive/style/UseDataClass.kt
package style

class Person(val name: String, val age: Int)

class Address(val street: String, var city: String)
