tests/fixtures/negative/style/DataClassContainsFunctions.kt
package style

data class User(val name: String, val age: Int)

data class Point(val x: Int, val y: Int)
